--- a/_html/main.html
+++ b/_html/main.html
@@ -29,8 +29,8 @@
 								</div>
 								<div class="sl-photo-wrap">
 									<video class="js-video-wrap" id="js-video-wrap01" loop muted>
+										<source src="./img/1.webm" type="video/webm">
 										<source src="./img/1.mp4" type="video/mp4">
-										<source src="./img/1.webp" type="video/webp">
 										<!--<source src="./img/1.ogv" type="video/ogg">-->
 										<p>HTML5 video не поддерживается вашим браузером.</p>
 									</video>
